# VI-RT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  valscript.sh
Camera/: camera.hpp
Image/: image.hpp
Light/: light.hpp
Primitive/: BB.hpp  primitive.cpp  primitive.hpp
Primitive/BRDF/: Phong.hpp
Primitive/Geometry/: geometry.hpp  mesh.cpp  mesh.hpp
Rays/: intersection.hpp  ray.hpp
Renderer/: renderer.hpp
Scene/: scene.cpp  scene.hpp
configs/: example.toml  example2.toml  phase1.toml  phase2.toml  phase3.toml  phase4.toml  phase4_multi.toml  phase4_single.toml
include/accel/: accel.hpp
include/camera/: camera.hpp  perspective.hpp
include/config/: config_parser.hpp
include/image/: image.hpp  image_ppm.hpp
include/light/: ambient_light.hpp  area_light.hpp  light.hpp  point_light.hpp
include/primitive/: bb.hpp  primitive.hpp
include/rays/: intersection.hpp  ray.hpp
include/renderer/: renderer.hpp  standard_renderer.hpp
include/scene/: scene.hpp
include/shader/: ambient_shader.hpp  distributed_shader.hpp  path_tracer_shader.hpp  shader.hpp  whitted_shader.hpp
include/utils/: rgb.hpp  vector.hpp
models/: cornell_box.mtl  cornell_box_VI.mtl
src/: main.cpp
src/accel/: accel.cpp
src/camera/: camera.cpp  camera.hpp  perspective.cpp  perspective.hpp
src/config/: config_parser.cpp  config_parser.hpp
src/image/: image.cpp  image.hpp  image_ppm.cpp  image_ppm.hpp
src/light/: ambient_light.cpp  ambient_light.hpp  area_light.cpp  area_light.hpp  light.hpp  point_light.cpp  point_light.hpp
utils/: RGB.hpp  vector.hpp
(+44 files in other folders)
